--- a/src/Soenneker.ServiceBus.Sender.csproj
+++ b/src/Soenneker.ServiceBus.Sender.csproj
@@ -1,5 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?><Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
 
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
@@ -30,14 +31,17 @@
         <LangVersion>latest</LangVersion>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>icon.png</PackageIcon>
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild></PropertyGroup>
-    
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
+
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
+    </ItemGroup>
 
+    <ItemGroup>
         <PackageReference Include="Soenneker.ServiceBus.Queue" Version="4.0.2110" />
-        <PackageReference Include="Soenneker.Utils.SingletonDictionary" Version="4.0.1146" />
+        <PackageReference Include="Soenneker.Dictionaries.Singletons" Version="4.0.1" />
     </ItemGroup>
 </Project>
